# baex-electron-wasm-goobercss

./: .gitignore  BAEX_RULES.md  CLEANUP_PLAN.md  EXBA_RULES.md  LEGACY_RENDERER_ARCHITECTURE.md  README.md  TODOS.md  api-docs.html  build.zig  debug-native.cjs  docs-coverage.txt  electron-builder.json5  index.html  package-lock.json  package.json  serve.json  tsconfig.json  vite.config.ts  vitest.setup.ts
api-docs-dist/: docs.json  index.html
core/rust/: Cargo.toml
core/sqlite-native/: Cargo.toml  package.json
core/sqlite-native/src/: lib.rs
electron/: main.ts
examples/async-loader/: AsyncLoader.test.ts  AsyncLoader.ts
examples/basic-component/: BasicComponent.test.ts  BasicComponent.ts
examples/parent-child/: ParentChild.test.ts  ParentChild.ts
examples/reactive-counter/: Counter.test.ts  Counter.ts
examples/todo-list/: TodoList.test.ts  TodoList.ts
examples/wasm-demo/: WasmDemo.test.ts  WasmDemo.ts
native/: engine.zig
native/sqlite-native/: Cargo.toml  index.node  package-lock.json
native/sqlite-native/src/: lib.rs
src/: main.test.ts  main.ts  style.css
src/app/: main.ts  styles.ts
src/desktop/: main.ts
src/examples/: registry.ts
src/framework/: BaseComponent.ts  WasmBridge.test.ts  WasmBridge.ts  index.ts  types.ts
src/kernel/: index.ts
src/main/: main.ts  preload.ts
src/renderer/: main.test.ts  main.ts  styles.ts
src/renderer-legacy/: main.ts  style.css
src/shell/: bootstrap.ts  main.ts  tabs.ts
src/showcase/: registry.ts
tools/api-doc-gen/: package-lock.json  (+1 more)
wasm/: main.zig  math.zig
wasm-rust/: Cargo.toml
(+309 files in other folders)
